--- a/app/views/internships/new_step_2.html.erb
+++ b/app/views/internships/new_step_2.html.erb
@@ -74,7 +74,8 @@
     <small id="conditionsHelp" class="form-text text-muted">Условия стажировки, возможность дальнейшего трудоустройства, офис, команда, плюшки.</small>
   </div>
 
-  <%= form.number_field :step, value: 2 %>
+  <%= form.hidden_field :step, value: 2 %>
+  <%#= hidden_field_tag :step, value: 2 %>
 
   <div class="d-flex justify-content-between mt-4 mb-5">
       <%= link_to 'Назад', new_step_1_internships_path, :class => 'btn btn-outline-primary' %>
