--- a/app/views/jobs/new_step_2.html.erb
+++ b/app/views/jobs/new_step_2.html.erb
@@ -70,7 +70,8 @@
     <small id="conditionsHelp" class="form-text text-muted">Условия стажировки, возможность дальнейшего трудоустройства, офис, команда, плюшки.</small>
   </div>
 
-  <%= form.number_field :step, value: 2 %>
+  <%#= form.number_field :step, value: 2 %>
+  <%= form.hidden_field :step, value: 2 %>
 
   <div class="d-flex justify-content-between mt-4 mb-5">
       <%= link_to 'Назад', new_step_1_jobs_path, :class => 'btn btn-outline-primary' %>
