--- a/app/views/internships/_form.html.erb
+++ b/app/views/internships/_form.html.erb
@@ -65,7 +65,7 @@
     </div>
     <div class="d-flex justify-content-between">
       <div>
-        <%= form.date_select :internship_duration %>
+        <%= form.text_field :internship_duration, :class => 'form-control' %>
       </div>
       <div>
         <%= form.check_box :internship_duration_none, {}, "1", "0" %>
@@ -122,18 +122,19 @@
     <small id="application_materialsHelp" class="form-text text-muted">Если есть.</small>
   </div>
 
-  <div class="field form-group flex-column">
-    <div>
-      <%= form.label "Дедлайн" %>
-    </div>
-    <div class="row">
-      <div class="input-group mb-3 col" id="datetimepicker1">
-        <%= form.text_field :deadline, :type => "text", :class => 'form-control', :id => 'datetimepicker' %>
-        <div class="input-group-append date">
-          <span class="input-group-text" id="basic-addon2"></span>
-        </div>
+  <%= form.label "Дедлайн" %>
+  <div class="field form-group">
+    <div class="d-flex justify-content-between">
+      <div class="input-group col">
+        <%= date_select :internship, :deadline,
+                 {
+                  :order => [:day, :month, :year],
+                  :start_year => 2018,
+                  :end_year => 2030
+                 },
+                 {:class => "custom-select"}  %>
       </div>
-      <div class="col">
+      <div>
         <%= form.check_box :deadline_none, {}, true, false %>
         <%= form.label "Бессрочно" %>
       </div>
