--- a/app/views/internships/new_step_2.html.erb
+++ b/app/views/internships/new_step_2.html.erb
@@ -36,7 +36,7 @@
     </div>
     <div class="d-flex justify-content-between">
       <div>
-        <%= form.date_select :internship_duration %>
+        <%= form.text_field :internship_duration, :class => 'form-control' %>
       </div>
       <div>
         <%= form.check_box :internship_duration_none, {}, "1", "0" %>
