--- a/app/views/jobs/new_step_2.html.erb
+++ b/app/views/jobs/new_step_2.html.erb
@@ -36,14 +36,16 @@
     <small id="special_requirementsHelp" class="form-text text-muted">Английский на уровне носителя, невероятная физическая сила, свой ноутбук, умение варить кофе? Опишите все особые требования здесь.</small>
   </div>
 
-  <div class="field form-group flex-column">
-    <div>
-      <%= form.label "Когда приступать?" %>
-    </div>
-    <div class="row">
-      <div class="col">
-        <%= form.date_select :work_start_date %>
-      </div>
+  <%= form.label "Когда приступать?" %>
+  <div class="field form-group">
+    <div class="input-group col-8">
+      <%= date_select :task, :work_start_date,
+               {
+                :order => [:day, :month, :year],
+                :start_year => 2018,
+                :end_year => 2030
+               },
+               {:class => "custom-select"}  %>
     </div>
   </div>
 
@@ -52,16 +54,13 @@
     <%= form.select :schedule, options_for_select([["Полная"], ["Частичная"], ["Удаленная"], ["Смешанная"]]), {}, {:class => 'custom-select'} %>
   </div>
 
-  <div class="field form-group">
-    <%= form.label "Сколько будет получать работник?" %>
+  <%= form.label "Сколько будет получать работник?" %>
+  <div class="field form-group d-flex align-items-center flex-row">
+    <%= form.label "От", :class => 'col-sm-1'%>
+    <%= form.text_field :salary_min, :class => 'form-control col-sm-2', :placeholder => "10 000" %>
 
-    <div class="form-group d-flex align-items-center">
-      <%= form.label "От", :class => 'col-sm-1'%>
-      <%= form.text_field :salary_min, :class => 'form-control col-sm-2', :placeholder => "10 000" %>
-
-      <%= form.label "До", :class => 'col-sm-1'%>
-      <%= form.text_field :salary_max, :class => 'form-control col-sm-2', :placeholder => "50 000" %>
-    </div>
+    <%= form.label "До", :class => 'col-sm-1'%>
+    <%= form.text_field :salary_max, :class => 'form-control col-sm-2', :placeholder => "50 000" %>
   </div>
 
   <div class="field form-group">
