--- a/app/views/public_talks/_form.html.erb
+++ b/app/views/public_talks/_form.html.erb
@@ -14,12 +14,12 @@
   <h1 class="mb-4">Запрос на гостевую лекцию</h1>
 
   <div class="field form-group">
-    <%= form.label "О чем будет лекция?" %>
+    <%= form.label "О чем будет лекция? *" %>
     <%= form.text_field :theme, :class => 'form-control' %>
   </div>
 
   <div class="field form-group">
-    <%= form.label "Кто будет лектором?" %>
+    <%= form.label "Кто будет лектором? *" %>
     <%= form.text_field :speaker, :class => 'form-control' %>
   </div>
 
