--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="field form-group">
-    <%= form.label "Ваш вопрос" %>
+    <%= form.label "Ваш вопрос *" %>
     <%= form.text_area :question, :class => 'form-control' %>
   </div>
 
