--- a/app/views/jobs/new_step_1.html.erb
+++ b/app/views/jobs/new_step_1.html.erb
@@ -14,13 +14,13 @@
   <h1 class="mb-4">О компании</h1>
 
   <div class="field form-group">
-    <%= form.label "Ваш email" %>
+    <%= form.label "Ваш email *" %>
     <%= form.text_field :email, :class => 'form-control' %>
     <small id="emailHelp" class="form-text text-muted">Будьте внимательны. Редактировать или закрыть вакансию можно только по ссылке, высланной на этот адрес.</small>
   </div>
 
   <div class="field form-group">
-    <%= form.label "Название компании" %>
+    <%= form.label "Название компании *" %>
     <%= form.text_field :company_name, :class => 'form-control' %>
   </div>
 
