--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -25,5 +25,6 @@
         </div>
       </div>
     </div>
+    <%#= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
   <% end %>
 </div>
