--- a/app/views/internships/index.html.erb
+++ b/app/views/internships/index.html.erb
@@ -25,6 +25,7 @@
         <div class="actions">
           <%= link_to 'Подробнее', internship, :class => 'btn btn-outline-primary' %>
         </div>
+        </div>
       </div>
     </div>
   <% end %>
