--- a/app/views/public_talks/_form.html.erb
+++ b/app/views/public_talks/_form.html.erb
@@ -1,42 +1,50 @@
 <%= form_with(model: public_talk, local: true, :class => 'col-6 m-auto') do |form| %>
-  <% if public_talk.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(public_talk.errors.count, "error") %> prohibited this public_talk from being saved:</h2>
+<% if public_talk.errors.any? %>
+<div id="error_explanation">
+<h2><%= pluralize(public_talk.errors.count, "error") %> prohibited this public_talk from being saved:</h2>
 
-      <ul>
-      <% public_talk.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<ul>
+<% public_talk.errors.full_messages.each do |message| %>
+<li><%= message %></li>
+<% end %>
+</ul>
+</div>
+<% end %>
 
-  <h1 class="mb-4">Запрос на гостевую лекцию</h1>
+<h1 class="mb-4">Запрос на гостевую лекцию</h1>
 
-  <div class="field form-group">
-    <%= form.label "О чем будет лекция? *" %>
-    <%= form.text_field :theme, :class => 'form-control' %>
-  </div>
+<div class="field form-group">
+<%= form.label "О чем будет лекция? *" %>
+<%= form.text_field :theme, :class => 'form-control' %>
+</div>
 
-  <div class="field form-group">
-    <%= form.label "Кто будет лектором? *" %>
-    <%= form.text_field :speaker, :class => 'form-control' %>
-  </div>
+<div class="field form-group">
+<%= form.label "Кто будет лектором? *" %>
+<%= form.text_field :speaker, :class => 'form-control' %>
+</div>
 
-  <div class="field form-group">
-    <%= form.label "Когда это произойдет?" %>
-    <%= form.date_select :public_talk_date, :class => 'form-control' %>
-  </div>
+<%= form.label "Когда это произойдет?" %>
+<div class="field form-group">
+<div class="input-group col-8">
+<%= date_select :public_talk, :public_talk_date,
+{
+:order => [:day, :month, :year],
+:start_year => 2018,
+:end_year => 2030
+},
+{:class => "custom-select"} %>
+</div>
+</div>
 
-  <div class="field form-group">
-    <%= form.label "Контакты лектора" %>
-    <%= form.text_field :speaker_contacts, :class => 'form-control' %>
-  </div>
+<div class="field form-group">
+<%= form.label "Контакты лектора" %>
+<%= form.text_field :speaker_contacts, :class => 'form-control' %>
+</div>
 
-  <div class="d-flex justify-content-between mt-4 mb-5">
-      <%= link_to 'Назад', public_talks_path, :class => 'btn btn-outline-primary' %>
-      <div class="actions">
-        <%= form.submit 'Отправить запрос', :class => 'btn btn-primary' %>
-      </div>
-  </div>
+<div class="d-flex justify-content-between mt-4 mb-5">
+<%= link_to 'Назад', public_talks_path, :class => 'btn btn-outline-primary' %>
+<div class="actions">
+<%= form.submit 'Отправить запрос', :class => 'btn btn-primary' %>
+</div>
+</div>
 <% end %>
